[gd_scene load_steps=7 format=2]

[ext_resource path="res://World/pictures/atlas_16x.png" type="Texture" id=1]
[ext_resource path="res://intro/tres/path_arrow.tres" type="Texture" id=2]
[ext_resource path="res://World/script/semi_wooden_chest.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 14 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="TileSet" id=2]
0/name = "path_arrow.tres 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 2, 7, 5 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="semi_wooden_chest" type="Node2D"]
script = ExtResource( 3 )

[node name="semi_wooden_chest" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 369, 32, 14, 15 )

[node name="Area2D" type="Area2D" parent="semi_wooden_chest"]
collision_layer = 128
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="semi_wooden_chest/Area2D"]
position = Vector2( 0, -7 )
shape = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="open" type="Sprite" parent="StaticBody2D"]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 304, 1, 16, 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="arrow_head" type="TileMap" parent="."]
visible = false
tile_set = SubResource( 2 )
cell_size = Vector2( 1, 1 )
format = 1
tile_data = PoolIntArray( -720899, 0, 0 )

[connection signal="body_shape_entered" from="semi_wooden_chest/Area2D" to="." method="_on_Area2D_body_shape_entered"]
